...
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
...
    <string name="info">Info</string>
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
...
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="attachment">Attachment</string>
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_to_load">Waiting to load</string>
    <string name="download_complete">Download complete</string>
...
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
...
    <string name="message_failed_to_send">Message failed to send: unknown error\n\n%1$s</string>
    <string name="key_details">Key details</string>
    <string name="public_key_below_is_safe_to_share">Public Keys are safe to share</string>
    <string name="show_public_key">Show public key</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
...
    <string name="attachment_not_found">The attachment not found</string>
    <string name="no_pub_keys">There are no public keys</string>
    <string name="could_not_decrypt_message_due_to_error">Could not decrypt this message due to error:\n\n %1$s </string>
    <string name="show_aliases">Show aliases</string>
    <string name="show_cc_bcc">Show CC/BCC</string>
...
    <string name="pub_key">Public Key</string>
    <string name="template_created">Created: %1$s</string>
    <string name="template_modified">Modified: %1$s</string>
    <string name="template_algorithm">Algorithm: %1$s</string>
    <string name="template_algorithm_bits">Bits: %1$s</string>
...
    <string name="fingerprints_">Fingerprints:</string>
    <string name="warning_key_expired">Warning: this key was expired on %1$s</string>
    <string name="warning_no_expected_email">Warning: it seems this key doesn\'t relates to expected email address %1$s</string>
    <string name="warning_one_of_recipients_has_expired_pub_key">One or more of your recipients have expired public keys (marked in orange).\n\nPlease ask them to send you updated public key. If this is an enterprise installation, please ask your systems admin.</string>
    <string name="warning_one_of_recipients_has_revoked_pub_key">One or more of your recipients have revoked public keys (marked in red).\n\nPlease ask them to send you a new public key. If this is an enterprise installation, please ask your systems admin.</string>
...
    <string name="update_private_key">Update private key</string>
    <string name="new_private_key_details">New Private Key details</string>
    <string name="fingerprint_mismatch_you_are_trying_to_import_different_key">Warning: Fingerprint mismatch. You are trying to import a different key.</string>
    <string name="you_are_trying_to_import_the_same_key">Warning: You are trying to import the same key.</string>
    <string name="warning_existing_key_has_more_recent_signature">Warning: the existing key has a more recent signature on it than the key you are trying to import.</string>
    <string name="enter_new_private_key">Enter a new private key</string>
    <string name="new_private_key">New Private Key</string>
...
