...
    android:orientation="vertical"
    android:paddingStart="@dimen/default_margin_content"
    android:paddingTop="@dimen/default_margin_content"
    android:paddingEnd="@dimen/default_margin_content">

    <TextView
        android:id="@+id/tVStatusMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_size_big" />

...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin_content_small" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVKeys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:layout_weight="1"
        android:visibility="gone"
        tools:itemCount="3"
...
        app:errorEnabled="true"
        app:passwordToggleContentDescription="description"
        app:passwordToggleEnabled="true"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTKeyPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="@dimen/default_margin_content_small"
        android:id="@+id/btnUpdatePassphrase"
        style="@style/AppWidget.Button.Big"
        android:layout_width="match_parent"
        android:text="@string/provide_passphrase"
        android:textAllCaps="true"
        android:visibility="gone"
        tools:visibility="visible" />
...
