...
            android:layout_marginEnd="@dimen/default_twice_dip"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/download"
            app:srcCompat="@drawable/ic_baseline_preview_grey_32dp" />

        <ImageButton
            android:id="@+id/imageButtonDownloadAtt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_twice_dip"
            android:layout_marginEnd="@dimen/default_twice_dip"
            android:background="?android:attr/selectableItemBackground"
...
