...
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tVCreated"
            tools:text="Modified: Nov 3, 2017" />

        <TextView
            android:id="@+id/tVWarning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content"
            android:layout_marginBottom="@dimen/default_margin_content"
            android:textColor="@color/red"
            android:textIsSelectable="true"
...
